--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,23 @@
             <option value="wife">ภรรยา</option>
             <option value="father">พ่อ</option>
             <option value="mother">แม่</option>
-            <option value="child">ลูก</option>
-            <option value="grandparent">ปู่/ย่า/ตา/ยาย</option>
-            <option value="mother-in-law">แม่ยาย/แม่สามี</option>
-            <option value="sibling">พี่น้อง/ญาติ</option>
+            <option value="son">ลูกชาย</option>
+            <option value="daughter">ลูกสาว</option>
+            <option value="grandfather">ปู่</option>
+            <option value="grandmother">ย่า</option>
+            <option value="grandfather-maternal">ตา</option>
+            <option value="grandmother-maternal">ยาย</option>
+            <option value="uncle">ลุง</option>
+            <option value="aunt">ป้า</option>
+            <option value="uncle-maternal">น้า</option>
+            <option value="aunt-maternal">อา</option>
+            <option value="older-brother">พี่ชาย</option>
+            <option value="older-sister">พี่สาว</option>
+            <option value="younger-brother">น้องชาย</option>
+            <option value="younger-sister">น้องสาว</option>
+            <option value="grandson">หลานชาย</option>
+            <option value="granddaughter">หลานสาว</option>
+            <option value="relative">ญาติพี่น้อง</option>
           </select>
         </div>
         
@@ -133,10 +146,23 @@
         'wife': 'ภรรยา', 
         'father': 'พ่อ',
         'mother': 'แม่',
-        'child': 'ลูก',
-        'grandparent': 'ปู่/ย่า/ตา/ยาย',
-        'mother-in-law': 'แม่ยาย/แม่สามี',
-        'sibling': 'พี่น้อง/ญาติ'
+        'son': 'ลูกชาย',
+        'daughter': 'ลูกสาว',
+        'grandfather': 'ปู่',
+        'grandmother': 'ย่า',
+        'grandfather-maternal': 'ตา',
+        'grandmother-maternal': 'ยาย',
+        'uncle': 'ลุง',
+        'aunt': 'ป้า',
+        'uncle-maternal': 'น้า',
+        'aunt-maternal': 'อา',
+        'older-brother': 'พี่ชาย',
+        'older-sister': 'พี่สาว',
+        'younger-brother': 'น้องชาย',
+        'younger-sister': 'น้องสาว',
+        'grandson': 'หลานชาย',
+        'granddaughter': 'หลานสาว',
+        'relative': 'ญาติพี่น้อง'
       };
 
       const genderNames = {
